fixed alignment

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,10 @@ body{
   text-align: center;
 }
 
+#start-form {
+  text-align: center;
+}
+
 img {
   max-width: 100%;
 }
